Fixed issue with source heading wrapping in FF.

--- a/src/scss/modules/_media-object.scss
+++ b/src/scss/modules/_media-object.scss
@@ -15,6 +15,8 @@
 
     // heading inside file explorer source panel header
     &.-location-text {
+        font-size: rem(18);
+        font-weight: lighter;
         line-height: $lrg-icon-height;
     }
 }
