--- a/src/scss/modules/_panel-header.scss
+++ b/src/scss/modules/_panel-header.scss
@@ -46,35 +46,12 @@
     // width: calc( 100% - #{$main-nav-width} ); // viewport - main nav
     width: 100%;
     // transform: translateY(-100%);
+    padding-top: 13px;
     background: $alabaster;
     // border-left: 1px solid $silver;
     // background: red;
-    // transition: width $drawer-animation-duration;
-    
 
 
-    // width of header for file explorer calculated using calc() formula 
-    // because it is position: fixed and the width cannot be set based on parent
-    // TODO: refactor mixin to make more efficient?
-    // @mixin calc-col-width($col-count) {
-    //     .-cols-#{$col-count} & {
-    //         width: calc( (100% - #{$main-nav-width}) / #{$col-count} ); // viewport - main nav
-    //     }
-    //     .drawer-is-open .-cols-#{$col-count} & {
-    //         width: calc( (100% - #{$main-nav-width} - #{$drawer-width}) / #{$col-count} ); // (viewport - main-nav - drawer) / col-count
-    //     }
-    //     .actions-is-open .-cols-#{$col-count} & {
-    //         width: calc( (100% - #{$main-nav-width} - #{$actions-width}) / #{$col-count} ); // (viewport - main-nav - actions) / col-count
-    //     }
-    //     .drawer-is-open.actions-is-open .-cols-#{$col-count} & {
-    //         width: calc( (100% - #{$main-nav-width} - #{$drawer-width} - #{$actions-width}) / #{$col-count} ); // (viewport - main-nav - drawer - actions) / col-count
-    //     }
-    // }
-
-    // @include calc-col-width(1);
-    // @include calc-col-width(2);
-    // @include calc-col-width(3);
-    
     // // remove left border when panel is inside the first column for file explorer
     // .-col-1 & {
     //     border-left: none;
